@@ -1,9 +1,9 @@
-Description: build s390 debugging symbols with -gstabs instead of with -g
-             to reduce linker memory usage.
-             Thanks to Oswald Buddenhagen for the hint.
+Description: build s390, armel, mips* debugging symbols with -gstabs
+ -g exhausts memory on these arches. Thanks to Oswald Buddenhagen for the hint.
 author: Sune Vuorela <sune@debian.org>
 Author: Modestas Vainius <modax@debian.org>
 Bug-Debian: http://bugs.debian.org/528485
+Bug-Debian: http://bugs.debian.org/618325
 Bug: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=618325
 
 --- a/WebKit.pri
@@ -12,8 +12,8 @@ Bug: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=618325
      DEFINES += NDEBUG
  }
  
-+equals(QT_ARCH, s390)|equals(QT_ARCH, arm) {
-+	message("S/390 and armel workaround for QtWebkit: do not build with -g, but with -gstabs")
++equals(QT_ARCH, s390)|equals(QT_ARCH, arm)|equals(QT_ARCH, mips) {
++	message("s390, armel, mipsel workaround for QtWebkit: do not build with -g, but with -gstabs")
 +	QMAKE_CXXFLAGS -= -g
 +	QMAKE_CXXFLAGS += -gstabs
 +}
